@@ -82,11 +82,6 @@ PATCHES PROPOSED TO BACKPORT FROM TRUNK:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ New patches should be added at the end of the list ]
 
-  *) Don't assume root privileges during make install
-   Trunk patch: https://git-wip-us.apache.org/repos/asf?p=trafficserver.git;a=commit;h=a862e283734c86d46a57624f9a05f09cfbbee175
-   Jira: https://issues.apache.org/jira/browse/TS-1295
-   +1: zwoop, jpeach, amc
-
   *) Fix WCCP build issues on FBSD.
    Trunk patch: a423c3fb44f56145060d35c3092a71577e6f5c74
    Jira: https://issues.apache.org/jira/browse/TS-1306
